<!--suppress CheckTagEmptyBody -->
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">3 3 5</string>
    <string name="app_label">3 3 5</string>

    <string name="button_launch_list_interface_description">Launch list interface</string>
    <string name="button_launch_list_interface_text">List</string>
    <string name="button_launch_buttons_interface_description">Launch buttons interface</string>
    <string name="button_launch_buttons_interface_text">Buttons</string>

    <string name="button_home_description">Home: Brings you back to the start</string>
    <string name="button_home_text">Home</string>
    <string name="button_up_description">Back: Go back to previous location</string>
    <string name="button_back_text">Back</string>
    <string name="button_enter_description">Enter: Open a folder or play a media item</string>
    <string name="button_enter_text">Enter</string>
    <string name="button_location_description">Location: Tells you the current location</string>
    <string name="button_location_text">Location</string>
    <string name="button_step_left_description">Previous: Go to previous action or item</string>
    <string name="button_step_left_text">Previous</string>
    <string name="button_step_right_description">Next: Go to next action or item</string>
    <string name="button_step_right_text">Next</string>

    <string name="button_skipToPrevious_description">Skip to previous track</string>
    <string name="button_rewind_description">Seek 10 seconds back</string>
    <string name="button_playPause_description">Play or pause current track</string>
    <string name="button_fastForward_description">Seek 10 seconds forward</string>
    <string name="button_skipToNext_description">Skip to next track</string>

    <string name="loading">Loading…</string>
    <string name="loading_please_wait">Loading, please wait</string>

    <string name="mainmenu_music_title">Music</string>
    <string name="mainmenu_music_subtitle">On your device</string>
    <string name="mainmenu_music_description">Music on your device</string>
    <string name="mainmenu_radio_title">Radio</string>
    <string name="mainmenu_radio_subtitle"></string>
    <string name="mainmenu_radio_description">Radio</string>
    <string name="mainmenu_playlist_title">Playlist</string>
    <string name="mainmenu_playlist_subtitle"></string>
    <string name="mainmenu_playlist_description">Playlist</string>
    <string name="mainmenu_favorites_title">Favorites</string>
    <string name="mainmenu_favorites_subtitle"></string>
    <string name="mainmenu_favorites_description">Favorites</string>
    <string name="mainmenu_preferences_title">Preferences</string>
    <string name="mainmenu_preferences_subtitle"></string>
    <string name="mainmenu_preferences_description">Preferences</string>
    <string name="mainmenu_donate_to_title">Donate to 335</string>
    <string name="mainmenu_donate_to_subtitle"></string>
    <string name="mainmenu_donate_to_description" tools:ignore="Typos">Donate to three three five</string>
    <string name="mainmenu_donate_to_uri">https://www.patreon.com/indr</string>

    <plurals name="music_albums">
        <item quantity="one">%,d album</item>
        <item quantity="other">%,d albums</item>
    </plurals>

    <plurals name="music_tracks">
        <item quantity="one">%,d song</item>
        <item quantity="other">%,d songs</item>
    </plurals>

    <plurals name="radio_stations">
        <item quantity="one">%,d radio station</item>
        <item quantity="other">%,d radio stations</item>
    </plurals>

    <string name="start_accessibility_warning"><![CDATA[
You are using accessibility assistance services.\n\
\n\
3 3 5 is designed to provide a faster and smoother experience than these services can provide. Disable your touch exploration or spoken feedback services during the usage of 3 3 5.\n\
\n\
If you are using Googles TalkBack, you can temporarily suspend the service by pressing both the volume up and down button. Use the same button combination to resume TalkBack later or turn your display off and on using the power button on your device.\n\
\n\
Go to www.indr.ch/335 to learn more.\n\
]]></string>

    <string name="start_tts_error"><![CDATA[
Text-to-Speech could not be loaded.\n\
\n\
Speech synthesizing is required for the button interface.\n\
\n\
Go to www.indr.ch/335 to learn more and find instructions on how to install Text-to-Speech.\n\
]]></string>

    <string name="unknown">Unknown</string>

    <string name="welcome_to_335">Welcome to 3 3 5</string>

    <!-- uamp.xml -->
    <string name="favorite">Favorite</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
    <string name="label_previous">Previous</string>
    <string name="label_next">Next</string>

    <string name="radio_countries_title">Countries</string>
    <string name="no_countries_found">No countries found</string>
    <string name="no_countries_found_error">Error: No countries found</string>
    <string name="show_top_countries">Show top countries</string>
    <string name="show_more_countries">Show more countries</string>
    <string name="show_all_countries">Show all countries</string>

    <string name="radio_genres_title">Genres</string>
    <string name="no_genres_found">No genres found</string>
    <string name="no_genres_found_error">Error: No genres found</string>
    <string name="show_top_genres">Show top genres</string>
    <string name="show_more_genres">Show more genres</string>
    <string name="show_all_genres">Show all genres</string>
    <string name="genre_not_found_error">Error: Genre %s not found</string>

    <string name="radio_languages_title">Languages</string>
    <string name="no_langauges_found">No languages found</string>
    <string name="no_languages_found_error">Error: No languages found</string>
    <string name="show_top_languages">Show top languages</string>
    <string name="show_more_languages">Show more languages</string>
    <string name="show_all_langauges">Show all languages</string>

    <string name="no_stations_found">No stations found</string>
    <string name="no_stations_found_error">Error: No stations found</string>
    <string name="station_not_found_error">Error: Radio station %s not found</string>
    <string name="show_top_stations">Show top stations</string>
    <string name="show_more_stations">Show more stations</string>
    <string name="show_all_stations">Show all stations</string>

    <string name="no_albums_found">No albums found</string>
    <string name="album_not_found_error">Error: Album %s not found</string>

    <string name="no_artists_found">No artists found</string>
    <string name="artist_not_found_error">Error: Album %s not found</string>

    <string name="no_songs_found">No songs found</string>
    <string name="song_not_found_error">Error: Song %s not found</string>

    <string name="continue_">Continue</string>
    <string name="increase_font_size">Increase font size</string>
    <string name="decrease_font_size">Decrease font size</string>

    <string name="play_all_songs">Play all songs</string>
    <string name="play_all_albums">Play all albums</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_all_songs_to_playlist">Add all songs to playlist</string>
    <string name="add_all_albums_to_playlist">Add all albums to playlist</string>

    <string name="speech_song_by_artist">%1$s by %2$s</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="favorite_added">Favorite added</string>
    <string name="favorite_removed">Favorite removed</string>
    <string name="empty_playlist">Empty playlist</string>
    <string name="play_playlist">Press to play playlist</string>
    <string name="clear_playlist">Press to clear playlist</string>
    <string name="not_available">Not available</string>
    <string name="toast_playlist_cleared">Playlist cleared</string>
    <string name="play_playlist_item">Press to play</string>
    <string name="error_playlist_item_not_found">Error: Playlist item not found</string>
    <string name="empty_favorites">No favorites</string>
    <string name="press_to_play">Press to play</string>
    <string name="station_votes">Votes: %1$d (%2$+d/-%3$d)</string>
    <string name="station_genres">Genres: %s</string>
    <string name="station_language">Language: %s</string>
    <string name="station_country">Country: %s</string>
    <string name="station_updated">Updated: %s</string>
    <string name="station_clicks">Clicks: %1$d (%2$+d)</string>

    <string name="item_station_is_broken_title">Broken station</string>
    <string name="item_station_is_broken_subtitle">Please try again later</string>
    <string name="item_station_is_broken_description">Station is broken, please try again later</string>

    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="genres">Genres</string>
    <string name="songs">Songs</string>

    <string name="radio_trending_title">Trending</string>
    <string name="music_album_by">Music album by %s</string>
    <string name="music_genre">Music genre</string>
    <string name="music_artist">Music artist</string>
    <string name="music_song_from_by">Music song from %1$s by %2$s</string>
    <string name="radio_genre">Radio genre</string>
    <string name="radio_genre_of">Radio genre of %s</string>
    <string name="radio_language">Radio language</string>
    <string name="radio_station">Radio station</string>
    <string name="radio_stations">Radio stations</string>
    <string name="radio_genres">Radio genres</string>
</resources>
