<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 Reto Inderbitzin (mail@indr.ch)
  ~
  ~ For the full copyright and license information, please view
  ~ the LICENSE file that was distributed with this source code.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".ui.activities.ListGuideActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fragmentPlayback"
        android:layout_below="@+id/toolbar">

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:drawSelectorOnTop="true"/>

        <FrameLayout
            android:id="@+id/progressBarHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:contentDescription="@string/loading_please_wait"
            android:visibility="gone">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"/>

        </FrameLayout>

        <fragment
            android:id="@+id/fragmentToast"
            android:name="ch.indr.threethreefive.ui.fragments.ToastFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            tools:layout="@layout/fragment_toast"/>

    </RelativeLayout>

    <fragment
        android:id="@+id/fragmentPlayback"
        android:name="ch.indr.threethreefive.ui.fragments.ListPlaybackFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        tools:layout="@layout/fragment_list_playback"/>

    <LinearLayout
        android:id="@+id/layoutChangeFontSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/buttonDecFontSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:clickable="true"
            android:contentDescription="@string/decrease_font_size"
            android:src="@drawable/ic_remove_white_48dp"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/buttonIncFontSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:clickable="true"
            android:contentDescription="@string/increase_font_size"
            android:src="@drawable/ic_add_white_48dp"/>

    </LinearLayout>

</RelativeLayout>
